Dependencies/eth32_files_2.04/examples/buttons/c/eth32.h

// A few Windows types in order to keep our
// data structures consistent
typedef void *HWND;

typedef unsigned int WPARAM;

typedef long LPARAM;
typedef unsigned short WORD;

// Event type codes
#define EVENT_DIGITAL             0

// Event Handler types
#define HANDLER_NONE            0
#define HANDLER_CALLBACK        1
#define HANDLER_MESSAGE         2
// Data type for handle to the ETH32 device
typedef void *eth32;

// Relevant information about an event's firing.  This structure
// is passed in to the user-defined callback when an event fires.
// Note that 4-byte types are used here for a reason - it helps to 
// avoid problems with byte-alignment differences between different 
// programming languages using this API.
typedef struct
{
	int id; // User-defined event ID
	int type; // Event type, as defined by the EVENT_DIGITAL, EVENT_* definitions
	int port; // Digital port, Analog event bank, or Counter number
	int bit;  // Bit or Channel, or -1 for a port event
	int prev_value; // Value of the bit / port / channel before
	                // the event fired
	int value;      // New value of the bit / port / channel
	                // or the number of times the counter has fired an event or rolled
	int direction; // -1 for falling, 1 for rising
} eth32_event;


// Format for callback function used with events
typedef void (CALLCONVENTION *eth32_eventfn)(eth32 handle, eth32_event *event, void *extra);


// Event handler information
typedef struct
{
	int type; /* which method to use for event notification */
	          /* HANDLER_NONE     - none; disabled.
	           * HANDLER_CALLBACK - callback function
	           * HANDLER_MESSAGE  - Windows message notification: 
	           *     A windows message with the given message ID is sent 
	           *     to the specified window
	           *     whenever a new event fires.  This is intended to be 
	           *     used with the event queue such that when the windows
	           *     message is received, you attempt to dequeue any events
	           *     that are in the message queue.
	           */
	/* The following are only used with type HANDLER_CALLBACK */
	int maxqueue; // Maximum number of events that can be queued waiting for 
	               // the callback to finish
	int fullqueue; // What to do if queue ever gets full.  Specify one of the
	               // QUEUE_... constants
	eth32_eventfn eventfn; // Address of user-defined callback function.
	void *extra;  // Extra user-defined value to be passed to the callback
	              // whenever it is called.

	/* The following are only used with type HANDLER_MESSAGE: */
	HWND window; // Window handle to send messages to.
	unsigned int msgid; // Windows message to be sent to window.
	WPARAM wparam; // wparam to be included with any messages that are sent
	LPARAM lparam; // lparam to be included with any messages that are sent
	
} eth32_handler;






// API Functions
eth32 CALLCONVENTION CALLEXTRA eth32_open(char *address, WORD port, unsigned int timeout, int *result);

int CALLCONVENTION CALLEXTRA eth32_set_timeout(eth32 handle, unsigned int timeout);

int CALLCONVENTION CALLEXTRA eth32_get_timeout(eth32 handle, unsigned int *timeout);

int CALLCONVENTION CALLEXTRA eth32_verify_connection(eth32 handle);

int CALLCONVENTION CALLEXTRA eth32_output_byte(eth32 handle, int port, int value);

int CALLCONVENTION CALLEXTRA eth32_output_bit(eth32 handle, int port, int bit, int value);

int CALLCONVENTION CALLEXTRA eth32_pulse_bit(eth32 handle, int port, int bit, int edge, int count);

int CALLCONVENTION CALLEXTRA eth32_set_led(eth32 handle, int led, int value);

int CALLCONVENTION CALLEXTRA eth32_input_byte(eth32 handle, int port, int *value);

int CALLCONVENTION CALLEXTRA eth32_input_successive(eth32 handle, int port, int max, int *value, int *status);

int CALLCONVENTION CALLEXTRA eth32_input_bit(eth32 handle, int port, int bit, int *value);

int CALLCONVENTION CALLEXTRA eth32_readback(eth32 handle, int port, int *value);

int CALLCONVENTION CALLEXTRA eth32_get_led(eth32 handle, int led, int *value);

int CALLCONVENTION CALLEXTRA eth32_set_direction(eth32 handle, int port, int direction);

int CALLCONVENTION CALLEXTRA eth32_get_direction(eth32 handle, int port, int *direction);

int CALLCONVENTION CALLEXTRA eth32_set_direction_bit(eth32 handle, int port, int bit, int direction);

int CALLCONVENTION CALLEXTRA eth32_get_direction_bit(eth32 handle, int port, int bit, int *direction);

int CALLCONVENTION CALLEXTRA eth32_set_analog_state(eth32 handle, int state);

int CALLCONVENTION CALLEXTRA eth32_get_analog_state(eth32 handle, int *state);

int CALLCONVENTION CALLEXTRA eth32_set_analog_reference(eth32 handle, int reference);

int CALLCONVENTION CALLEXTRA eth32_get_analog_reference(eth32 handle, int *reference);

int CALLCONVENTION CALLEXTRA eth32_input_analog(eth32 handle, int channel, int *value);

int CALLCONVENTION CALLEXTRA eth32_set_analog_eventdef(eth32 handle, int bank, int channel, int lomark, int himark, int defaultval);

int CALLCONVENTION CALLEXTRA eth32_get_analog_eventdef(eth32 handle, int bank, int channel, int *lomark, int *himark);

int CALLCONVENTION CALLEXTRA eth32_set_analog_assignment(eth32 handle, int channel, int source);

int CALLCONVENTION CALLEXTRA eth32_get_analog_assignment(eth32 handle, int channel, int *source);

int CALLCONVENTION CALLEXTRA eth32_reset(eth32 handle);

int CALLCONVENTION CALLEXTRA eth32_get_serialnum(eth32 handle, int *batch, int *unit);

int CALLCONVENTION CALLEXTRA eth32_get_serialnum_string(eth32 handle, char *serial, int bufsize);

int CALLCONVENTION CALLEXTRA eth32_get_product_id(eth32 handle, int *prodid);

int CALLCONVENTION CALLEXTRA eth32_get_firmware_release(eth32 handle, int *major, int *minor);

int CALLCONVENTION CALLEXTRA eth32_connection_flags(eth32 handle, int reset, int *flags);


int CALLCONVENTION CALLEXTRA eth32_set_event_queue_config(eth32 handle, int maxsize, int fullqueue);

int CALLCONVENTION CALLEXTRA eth32_get_event_queue_status(eth32 handle, int *maxsize, int *fullqueue, int *cursize);

int CALLCONVENTION CALLEXTRA eth32_dequeue_event(eth32 handle, eth32_event *event, int timeout);

int CALLCONVENTION CALLEXTRA eth32_empty_event_queue(eth32 handle);

int CALLCONVENTION CALLEXTRA eth32_enable_event(eth32 handle, int type, int port, int bit, int id);

int CALLCONVENTION CALLEXTRA eth32_disable_event(eth32 handle, int type, int port, int bit);

int CALLCONVENTION CALLEXTRA eth32_set_event_handler(eth32 handle, eth32_handler *handler);